# fun

./: 2-tokenizers.ipynb  3-deployment.ipynb  4-fine-tuning.ipynb  5-datasets.ipynb  README.md  ml.ipynb  pyproject.toml
notes/: 1- Intro.md  2- Transformers.md  3- Text Generation Inference with LLMs.md  4- Using Transformers.md  5- Models.md  6- Optimized Inference Deployment.md  7- Fine-Tuning.md
