[project]
name = "fun"
version = "0.1.0"
description = "Hugging Face LLM course"
authors = [
    {name = "Watsh Rajneesh",email = "rwatsh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets (>=4.0.0,<5.0.0)",
    "evaluate (>=0.4.5,<0.5.0)",
    "transformers[torch] (>=4.53.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
